Change image placeholder

--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -31,7 +31,7 @@
         <div class="row no-gutters">
           <div class="col-12">
           <% if @tour.first_image.nil? || @tour.first_image == '' %>
-            <a id="first_image_modal_link" class="text-decoration-underline modal-link first-image"><img class="card-img-top" style="width: 537.938px; height: 358.625px" src="<%= asset_path('placeholder-image.png') %>" alt="Card image cap"></a>
+            <a id="first_image_modal_link" class="text-decoration-underline modal-link first-image"><img class="card-img-top" style="width: 537.938px; height: 358.625px" src="<%= asset_path('choose-image.png') %>" alt="Card image cap"></a>
           <% else %>
             <a id="first_image_modal_link" class="text-decoration-underline modal-link first-image"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.first_image}", style: 'width: 537.938px; height: 358.625px' %></a>
           <% end %>
