--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -3,20 +3,22 @@
   <div class="container p-0 m-0">
     <div class="row gx-4">
     <div class="col-2"></div>
-      <div class="card col-8 px-0" >
+      <div class="card col-8 p-5" >
         <div class="row justify-content-center">
-        <img class="card-img-top ml-5" style="width:50%" src="<%= asset_path('pdf.png') %>"/>
+        <img class="card-img-top ml-5 mt-3" style="width:27%" src="<%= asset_path('pdf.png') %>"/>
         </div>
         <div class="card-body">
-          <h5 class="card-title">PROOF REVIEW AND APPROVAL</h5>
-          <p class="card-text">Please be sure to preview your proof before giving your approval. We cannot be held responsible for printed issues once approved.</p>
           <div class="row">
-            <div class="col-6">
-              <%= link_to "PREVIEW", preview_path(:tour_id => @tour.id), class:'btn btn-primary w-100', :data => {disable_with: "Previewing PDF ..."} %>
+            <div class="col-2"></div>
+            <div class="col-8">
+              <%= link_to "LOW RESOLUTION PREVIEW", preview_path(:tour_id => @tour.id), class:'btn btn-primary w-100 mb-5 mt-5', :data => {disable_with: "Previewing PDF ..."} %>
             </div>
-            <div class="col-6">
+            <div class="col-2"></div>
+            <div class="col-2"></div>
+            <div class="col-8">
               <%= link_to "NEXT STEP", create_path(:tour_id => @tour.id), class:'btn btn-primary w-100', :data => {disable_with: "Generating PDF ..."} %>
             </div>
+            <div class="col-2"></div>
           </div>
 
         </div>
