Fix Tavish notes from email May 4th 2023

--- a/app/views/tour_details/price.js.erb
+++ b/app/views/tour_details/price.js.erb
@@ -1,2 +1,2 @@
 $('#price_modal').modal('hide');
-$("#price_modal_link").html("<%= @tour.price %>");
+$("#price_modal_link").html("LISTED FOR <%= number_with_delimiter(@tour.price) %>");
