--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -11,7 +11,7 @@
           <div class="row">
             <div class="col-2"></div>
             <div class="col-8">
-              <%= link_to "LOW RESOLUTION PREVIEW", preview_path(:tour_id => @tour.id), class:'btn btn-primary w-100 mb-5 mt-5', :data => {disable_with: "Previewing PDF ..."} %>
+              <%= link_to "LOW RESOLUTION PREVIEW", preview_path(:tour_id => @tour.id), class:'btn btn-primary w-100 mb-5 mt-5', :data => {disable_with: "Previewing PDF ..."}, target: '_blank' %>
             </div>
             <div class="col-2"></div>
             <div class="col-2"></div>
